@startuml

title __VISITEUR's Class Diagram__\n
    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Visiteur {
          class LPY.appliVisiteur.Controller.Visiteur.VisitorDepartmentController {
              + getDepartment()
              + getDepartments()
          }
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Visiteur {
          class LPY.appliVisiteur.Controller.Visiteur.VisitorDiplomaController {
              + getDiploma()
              + getDiplomas()
          }
        }
      }
    }

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Visiteur {
          class LPY.appliVisiteur.Controller.Visiteur.VisitorDrugController {
              + getDepartment()
              + getDrugs()
          }
        }
      }
    }

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Visiteur {
          class LPY.appliVisiteur.Controller.Visiteur.VisitorDrugPresentationController {
              + deleteDrug()
              + getDrug()
              + patchDrug()
          }
        }
      }
    }

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Visiteur {
          class LPY.appliVisiteur.Controller.Visiteur.VisitorPratitionnerController {
              + getDepartment()
              + getPratitionners()
          }
        }
      }
    }

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Visiteur {
          class LPY.appliVisiteur.Controller.Visiteur.VisitorRegionController {
              + getRegion()
              + getRegions()
          }
        }
      }
    }

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Visiteur {
          class LPY.appliVisiteur.Controller.Visiteur.VisitorReportController {
              + deleteReport()
              + getReport()
              + getReports()
              + patchReport()
              + postReport()
          }
        }
      }
    }

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Visiteur {
          class LPY.appliVisiteur.Controller.Visiteur.VisitorSectorController {
              + getSector()
              + getSectors()
          }
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Visiteur {
          class LPY.appliVisiteur.Controller.Visiteur.VisitorUserController {
              + getVisitor()
              + postVisitor()
          }
        }
      }
    }

    namespace PY.appliVisiteur {
      namespace Controller {
        namespace Visiteur {
          class LPY.appliVisiteur.Controller.Visiteur.VisitorWorkedTimeController {
              + getWorkedTime()
              + getWorkedTimes()
          }
        }
      }
    }
  

  LPY.appliVisiteur.Controller.Visiteur.VisitorDepartmentController -up-|> LPY.appliVisiteur.Controller.BaseController
  LPY.appliVisiteur.Controller.Visiteur.VisitorDepartmentController o-- LPY.appliVisiteur.Model.Repository.DepartmentRepository : departmentRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorDiplomaController -up-|> LPY.appliVisiteur.Controller.BaseController
  LPY.appliVisiteur.Controller.Visiteur.VisitorDiplomaController o-- LPY.appliVisiteur.Model.Repository.DiplomaRepository : diplomaRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorDrugController -up-|> LPY.appliVisiteur.Controller.BaseController
  LPY.appliVisiteur.Controller.Visiteur.VisitorDrugController o-- LPY.appliVisiteur.Model.Repository.DrugRepository : drugRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorDrugPresentationController -up-|> LPY.appliVisiteur.Controller.BaseController
  LPY.appliVisiteur.Controller.Visiteur.VisitorDrugPresentationController o-- LPY.appliVisiteur.Model.Repository.DrugPresentationRepository : drugPresentationRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorDrugPresentationController o-- LPY.appliVisiteur.Model.Repository.DrugRepository : drugRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorDrugPresentationController o-- LPY.appliVisiteur.Model.Repository.PraticionnerRepository : praticionnerRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorDrugPresentationController o-- LPY.appliVisiteur.Model.Repository.ReportRepository : reportRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorPratitionnerController -up-|> LPY.appliVisiteur.Controller.BaseController
  LPY.appliVisiteur.Controller.Visiteur.VisitorPratitionnerController o-- LPY.appliVisiteur.Model.Repository.PraticionnerRepository : praticionnerRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorRegionController -up-|> LPY.appliVisiteur.Controller.BaseController
  LPY.appliVisiteur.Controller.Visiteur.VisitorRegionController o-- LPY.appliVisiteur.Model.Repository.RegionRepository : regionRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorReportController -up-|> LPY.appliVisiteur.Controller.BaseController
  LPY.appliVisiteur.Controller.Visiteur.VisitorReportController o-- LPY.appliVisiteur.Model.Repository.DrugPresentationRepository : drugPresentationRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorReportController o-- LPY.appliVisiteur.Model.Repository.DrugRepository : drugRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorReportController o-- LPY.appliVisiteur.Model.Repository.PraticionnerRepository : praticionnerRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorReportController o-- LPY.appliVisiteur.Model.Repository.ReportRepository : reportRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorSectorController -up-|> LPY.appliVisiteur.Controller.BaseController
  LPY.appliVisiteur.Controller.Visiteur.VisitorSectorController o-- LPY.appliVisiteur.Model.Repository.SecteurRepository : secteurRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorUserController -up-|> LPY.appliVisiteur.Controller.BaseController
  LPY.appliVisiteur.Controller.Visiteur.VisitorUserController o-- LPY.appliVisiteur.Model.Repository.ReportRepository : reportRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorUserController o-- LPY.appliVisiteur.Model.Repository.UserRepository : userRepository
  LPY.appliVisiteur.Controller.Visiteur.VisitorWorkedTimeController -up-|> LPY.appliVisiteur.Controller.BaseController
  LPY.appliVisiteur.Controller.Visiteur.VisitorWorkedTimeController o-- LPY.appliVisiteur.Model.Repository.WorkedTimeRepository : workedTimeRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
